--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "salah-project-education",
   "version": "0.0.0",
   "scripts": {
+    "json-server": "json-server --watch fakedata/db.json",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
